objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__DRBundleName__c</fullName>
        <label>DRBundleName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRError__c</fullName>
        <label>DRError</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRProgressData__c</fullName>
        <label>DRProgressData</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRStatus__c</fullName>
        <label>DRStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FloorPrice__c</fullName>
        <description>Minimum price for this product</description>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OverageCharge__c</fullName>
        <label>Overage Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OverageUOM__c</fullName>
        <label>Overage UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Texts</fullName>
                </value>
                <value>
                    <fullName>Gigabytes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecurringPrice__c</fullName>
        <label>Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecurringUOM__c</fullName>
        <label>Recurring UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>